infrastructure/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lanchonete-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lanchonete
  template:
    metadata:
      labels:
        app: lanchonete
    spec:
      containers:
      - name: lanchonete-container
        image: lanchonete-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
