infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lanchonete-service
spec:
  type: NodePort
  selector:
    app: lanchonete
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
